--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -20,8 +20,10 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 
 # Networking
-axum = "0.7"
+axum = { version = "0.7", features = ["ws"] }
 tower-http = { version = "0.5", features = ["cors", "trace"] }
+tokio-tungstenite = "0.21"
+futures-util = "0.3"
 
 # P2P (libp2p)
 libp2p = { version = "0.53", features = ["tokio", "gossipsub", "mdns", "noise", "tcp", "yamux", "macros"] }
