--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -38,6 +38,9 @@ tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 # Time
 chrono = { version = "0.4", features = ["serde"] }
 
+# HTTP client
+reqwest = { version = "0.12", features = ["json"] }
+
 # Error handling
 thiserror = "1.0"
 anyhow = "1.0"
